--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "057b2cfa",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,12 @@
     "gvm_root = os.path.abspath(os.path.join(script_dir, '../../'))\n",
     "sys.path.insert(0, gvm_root)\n",
     "\n",
-    "from gvm_toolkit import GVMCombination"
+    "from gvm.gvm_toolkit import GVMCombination"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "701cb532",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm_toolkit.py:261: UserWarning: Correlation matrix \"ptmiss\" asymmetric for measurements e and f: 0.36 vs 0.86\n",
+      "/Users/enzocanonero/Documents/PhD/tesi-codice/errors-on-errors/top-combination/code3.0/gvm/gvm_toolkit.py:262: UserWarning: Correlation matrix \"ptmiss\" asymmetric for measurements e and f: 0.36 vs 0.86\n",
       "  warnings.warn(\n"
      ]
     },
@@ -62,7 +62,7 @@
    "source": [
     "comb           = GVMCombination.from_yaml('input_files/LHC_comb.yaml')\n",
     "comb.fit()\n",
-    "mu_hat         = comb.fit_results['mu']\n",
+    "mu_hat         = comb.fit_results.mu\n",
     "ci_low, ci_high, ci_half = comb.confidence_interval()\n",
     "chi2           = comb.goodness_of_fit()\n",
     "ndof           = comb.n_meas - 1\n",
@@ -104,7 +104,7 @@
     "systematics = ['LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
     "eps_grid = np.linspace(0., 0.6, 7)\n",
     "\n",
-    "base_mu = comb.fit_results['mu']\n",
+    "base_mu = comb.fit_results.mu\n",
     "base_ci = comb.confidence_interval()[2]\n",
     "\n",
     "cv = {s: [] for s in systematics}\n",
@@ -117,7 +117,7 @@
     "    for eps in eps_grid:\n",
     "        info['syst'][syst]['error-on-error']['value'] = eps\n",
     "        comb.update_data(info)\n",
-    "        cv[syst].append(comb.fit_results['mu'])\n",
+    "        cv[syst].append(comb.fit_results.mu)\n",
     "        ci[syst].append(comb.confidence_interval()[2])"
    ]
   },
@@ -231,7 +231,7 @@
    "source": [
     "comb_fict = GVMCombination.from_yaml('input_files/LHC_comb_fictitious_meas.yaml')\n",
     "comb_fict.fit()\n",
-    "mu_hat = comb_fict.fit_results['mu']\n",
+    "mu_hat = comb_fict.fit_results.mu\n",
     "ci_low, ci_high, ci_half = comb_fict.confidence_interval()\n",
     "chi2 = comb_fict.goodness_of_fit()\n",
     "ndof = comb_fict.n_meas - 1\n",
@@ -262,7 +262,7 @@
     "systematics = ['NEW', 'LHCbJES', 'btag', 'ME', 'LHCJES1', 'LHCJES2', 'method', 'CMSbHad', 'LHCrad']\n",
     "eps_grid = np.linspace(0., 0.6, 7)\n",
     "\n",
-    "base_mu = comb_fict.fit_results['mu']\n",
+    "base_mu = comb_fict.fit_results.mu\n",
     "base_ci = comb_fict.confidence_interval()[2]\n",
     "\n",
     "cv_fict = {s: [] for s in systematics}\n",
@@ -275,7 +275,7 @@
     "    for eps in eps_grid:\n",
     "        info['syst'][syst]['error-on-error']['value'] = eps\n",
     "        comb_fict.update_data(info)\n",
-    "        cv_fict[syst].append(comb_fict.fit_results['mu'])\n",
+    "        cv_fict[syst].append(comb_fict.fit_results.mu)\n",
     "        ci_fict[syst].append(comb_fict.confidence_interval()[2])"
    ]
   },
