--- a/tutorials/toy/tutorial.ipynb
+++ b/tutorials/toy/tutorial.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "151b1b6b",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
     "if gvm_root not in sys.path:\n",
     "    sys.path.insert(0, gvm_root)\n",
     "\n",
-    "from gvm_toolkit import GVMCombination"
+    "from gvm.gvm_toolkit import GVMCombination"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fce66e15",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
    "source": [
     "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
     "comb.fit()\n",
-    "mu_hat = comb.fit_results['mu']\n",
+    "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
     "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
@@ -106,7 +106,7 @@
     "\n",
     "comb = GVMCombination.from_yaml('input_files/hybrid_corr.yaml')\n",
     "comb.fit()\n",
-    "mu_hat = comb.fit_results['mu']\n",
+    "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
     "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
@@ -117,7 +117,7 @@
     "\n",
     "comb = GVMCombination.from_yaml('input_files/full_corr.yaml')\n",
     "comb.fit()\n",
-    "mu_hat = comb.fit_results['mu']\n",
+    "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
     "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
@@ -156,7 +156,7 @@
    "source": [
     "comb = GVMCombination.from_yaml('input_files/stat_cov.yaml')\n",
     "comb.fit()\n",
-    "mu_hat = comb.fit_results['mu']\n",
+    "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
     "chi_2 = comb.goodness_of_fit()\n",
     "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
@@ -206,7 +206,7 @@
     "# apply modifications and refit\n",
     "comb.update_data(info)\n",
     "comb.fit()\n",
-    "print(f\"updated mu_hat={comb.fit_results['mu']:.4f}\")\n"
+    "print(f\"updated mu_hat={comb.fit_results.mu:.4f}\")\n"
    ]
   },
   {
@@ -272,7 +272,7 @@
     "    base_info = deepcopy(base_info)\n",
     "    base_info['syst']['sys1']['error-on-error']['value'] = float(eps)\n",
     "    comb.update_data(base_info)\n",
-    "    cv.append(comb.fit_results['mu'])\n",
+    "    cv.append(comb.fit_results.mu)\n",
     "    lower_bound.append(comb.confidence_interval()[0])\n",
     "    upper_bound.append(comb.confidence_interval()[1])\n",
     "    ci.append(comb.confidence_interval()[2])\n",
@@ -417,7 +417,7 @@
     "    base_info = deepcopy(base_info)\n",
     "    base_info['syst']['sys1']['error-on-error']['value'] = float(eps)\n",
     "    comb.update_data(base_info)\n",
-    "    cv.append(comb.fit_results['mu'])\n",
+    "    cv.append(comb.fit_results.mu)\n",
     "    lower_bound.append(comb.confidence_interval()[0])\n",
     "    upper_bound.append(comb.confidence_interval()[1])\n",
     "    ci.append(comb.confidence_interval()[2])\n",
@@ -564,7 +564,7 @@
     "    base_info = deepcopy(base_info)\n",
     "    base_info['syst']['sys1']['error-on-error']['value'] = np.array([eps, eps])\n",
     "    comb.update_data(base_info)\n",
-    "    cv.append(comb.fit_results['mu'])\n",
+    "    cv.append(comb.fit_results.mu)\n",
     "    lower_bound.append(comb.confidence_interval()[0])\n",
     "    upper_bound.append(comb.confidence_interval()[1])\n",
     "    ci.append(comb.confidence_interval()[2])\n",
@@ -699,7 +699,7 @@
     "    base_info = deepcopy(base_info)\n",
     "    base_info['syst']['sys1']['error-on-error']['value'] = float(eps)\n",
     "    comb.update_data(base_info)\n",
-    "    cv.append(comb.fit_results['mu'])\n",
+    "    cv.append(comb.fit_results.mu)\n",
     "    lower_bound.append(comb.confidence_interval()[0])\n",
     "    upper_bound.append(comb.confidence_interval()[1])\n",
     "    ci.append(comb.confidence_interval()[2])\n",
@@ -838,7 +838,7 @@
     "    base_info = deepcopy(base_info)\n",
     "    base_info['syst']['sys1']['error-on-error']['value'] = float(eps)\n",
     "    comb.update_data(base_info)\n",
-    "    cv.append(comb.fit_results['mu'])\n",
+    "    cv.append(comb.fit_results.mu)\n",
     "    lower_bound.append(comb.confidence_interval()[0])\n",
     "    upper_bound.append(comb.confidence_interval()[1])\n",
     "    ci.append(comb.confidence_interval()[2])\n",
@@ -935,7 +935,7 @@
     "    base_info = deepcopy(base_info)\n",
     "    base_info['syst']['sys1']['error-on-error']['value'] = float(eps)\n",
     "    comb.update_data(base_info)\n",
-    "    cv.append(comb.fit_results['mu'])  \n",
+    "    cv.append(comb.fit_results.mu)  \n",
     "    lower_bound.append(comb.confidence_interval()[0])\n",
     "    upper_bound.append(comb.confidence_interval()[1])\n",
     "    ci.append(comb.confidence_interval()[2])\n",
