Defintion of the input data object

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -19,7 +19,8 @@
     "gvm_root = os.path.abspath(os.path.join(script_dir, '../../'))\n",
     "sys.path.insert(0, gvm_root)\n",
     "\n",
-    "from gvm.gvm_toolkit import GVMCombination"
+    "from gvm.gvm_toolkit import GVMCombination\n",
+    "from gvm.config import load_input_data\n"
    ]
   },
   {
@@ -60,7 +61,14 @@
     }
    ],
    "source": [
-    "comb           = GVMCombination.from_yaml('input_files/LHC_comb.yaml')\n",
+    "data = load_input_data('input_files/LHC_comb.yaml')\n",
+    "\n",
+    "comb_fict = GVMCombination(data)\n",
+    "\n",
+    
+    "\n",
+    "comb           = GVMCombination(data)\n",
+    "\n",
     "comb.fit()\n",
     "mu_hat         = comb.fit_results.mu\n",
     "ci_low, ci_high, ci_half = comb.confidence_interval()\n",
@@ -229,7 +237,10 @@
     }
    ],
    "source": [
-    "comb_fict = GVMCombination.from_yaml('input_files/LHC_comb_fictitious_meas.yaml')\n",
+    "data = load_input_data('input_files/LHC_comb_fictitious_meas.yaml')\n",
+    "\n",
+    "comb_fict = GVMCombination(data)\n",
+    "\n",
     "comb_fict.fit()\n",
     "mu_hat = comb_fict.fit_results.mu\n",
     "ci_low, ci_high, ci_half = comb_fict.confidence_interval()\n",
