--- a/tutorials/toy/tutorial.ipynb
+++ b/tutorials/toy/tutorial.ipynb
@@ -34,7 +34,8 @@
     "if gvm_root not in sys.path:\n",
     "    sys.path.insert(0, gvm_root)\n",
     "\n",
-    "from gvm.gvm_toolkit import GVMCombination"
+    "from gvm.gvm_toolkit import GVMCombination\n",
+    "from gvm.config import load_input_data\n"
    ]
   },
   {
@@ -80,20 +81,23 @@
      "text": [
       "Diagonal\n",
       "mu_hat = 0.3462, CI = (-0.5332, 1.2230)\n",
-      "χ² = 2.769, significance = 1.6641005886756863 \n",
+      "\u03c7\u00b2 = 2.769, significance = 1.6641005886756863 \n",
       "\n",
       "Hybrid correlation\n",
       "mu_hat = 0.4500, CI = (-0.5288, 1.4212)\n",
-      "χ² = 3.600, significance = 1.8973665961010266 \n",
+      "\u03c7\u00b2 = 3.600, significance = 1.8973665961010266 \n",
       "\n",
       "Fully correlated\n",
       "mu_hat = 0.5000, CI = (-0.5000, 1.5003)\n",
-      "χ² = 4.000, significance = 1.999999999999998\n"
+      "\u03c7\u00b2 = 4.000, significance = 1.999999999999998\n"
      ]
     }
    ],
    "source": [
-    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "data = load_input_data('input_files/diag_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "comb.fit()\n",
     "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
@@ -102,9 +106,12 @@
     "significance = norm.ppf(1 - p_value/2)\n",
     "print('Diagonal')\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'χ² = {chi_2:.3f}, significance = {significance} \\n')\n",
+    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance} \\n')\n",
     "\n",
-    "comb = GVMCombination.from_yaml('input_files/hybrid_corr.yaml')\n",
+    "data = load_input_data('input_files/hybrid_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "comb.fit()\n",
     "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
@@ -113,9 +120,12 @@
     "significance = norm.ppf(1 - p_value/2)\n",
     "print('Hybrid correlation')\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'χ² = {chi_2:.3f}, significance = {significance} \\n')\n",
+    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance} \\n')\n",
     "\n",
-    "comb = GVMCombination.from_yaml('input_files/full_corr.yaml')\n",
+    "data = load_input_data('input_files/full_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "comb.fit()\n",
     "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
@@ -124,7 +134,7 @@
     "significance = norm.ppf(1 - p_value/2)\n",
     "print('Fully correlated')\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'χ² = {chi_2:.3f}, significance = {significance}')"
+    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance}')"
    ]
   },
   {
@@ -135,7 +145,7 @@
     "## 2. Non-diagonal statistical covariance\n",
     "The same systematic is fully correlated as above, but this time the statistical uncertainties are specified via a covariance matrix that includes non-zero off-diagonal terms.\n",
     "\n",
-    "Unlike systematic uncertainties — which can be described through correlation matrices — statistical uncertainties must be provided directly as a **covariance matrix**."
+    "Unlike systematic uncertainties \u2014 which can be described through correlation matrices \u2014 statistical uncertainties must be provided directly as a **covariance matrix**."
    ]
   },
   {
@@ -149,12 +159,15 @@
      "output_type": "stream",
      "text": [
       "mu_hat = 0.5000, CI = (-0.9187, 1.9138)\n",
-      "χ² = 4.000, significance = 1.999999999999998\n"
+      "\u03c7\u00b2 = 4.000, significance = 1.999999999999998\n"
      ]
     }
    ],
    "source": [
-    "comb = GVMCombination.from_yaml('input_files/stat_cov.yaml')\n",
+    "data = load_input_data('input_files/stat_cov.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "comb.fit()\n",
     "mu_hat = comb.fit_results.mu\n",
     "ci_low, ci_high, _ = comb.confidence_interval()\n",
@@ -162,7 +175,7 @@
     "p_value = 1 - chi2.cdf(chi_2, df=1)\n",
     "significance = norm.ppf(1 - p_value/2)\n",
     "print(f'mu_hat = {mu_hat:.4f}, CI = ({ci_low:.4f}, {ci_high:.4f})')\n",
-    "print(f'χ² = {chi_2:.3f}, significance = {significance}')\n"
+    "print(f'\u03c7\u00b2 = {chi_2:.3f}, significance = {significance}')\n"
    ]
   },
   {
@@ -190,7 +203,10 @@
     }
    ],
    "source": [
-    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "data = load_input_data('input_files/diag_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "# extract current configuration\n",
     "info = comb.input_data()\n",
@@ -218,11 +234,11 @@
     "\n",
     "We now vary the error-on-error parameter ($\\varepsilon$) from 0 to 0.6 to illustrate how the combination results depend on its value. When errors-on-errors are nonzero, the distinction between *independent* and *dependent* systematics becomes relevant and affects the outcome of the combination.\n",
     "\n",
-    "- When a systematic effect is **independent**, the estimates of the systematic uncertainties for the measurements in the combination are statistically independent. This means that the systematic uncertainty for measurement *m1* could be overestimated while *m2* is underestimated, or vice versa — both estimates can fluctuate independently. This also implies that the correlation matrix of the corresponding nuisance parameters must be diagonal. If a non-diagonal correlation matrix is provided, the toolkit will raise an error.\n",
+    "- When a systematic effect is **independent**, the estimates of the systematic uncertainties for the measurements in the combination are statistically independent. This means that the systematic uncertainty for measurement *m1* could be overestimated while *m2* is underestimated, or vice versa \u2014 both estimates can fluctuate independently. This also implies that the correlation matrix of the corresponding nuisance parameters must be diagonal. If a non-diagonal correlation matrix is provided, the toolkit will raise an error.\n",
     "\n",
     "- When a systematic effect is **dependent**, the estimates of the systematic uncertainties are statistically dependent. In this case, if one estimate is overestimated, the other must be as well, and vice versa. This situation may arise, for example, when uncorrelated systematic effects are estimated using similar techniques. A typical LHC example is a two-point systematic derived from comparing HERWIG and PYTHIA. When the **dependent** type is used, an arbitrary correlation matrix can be provided for the given systematic.\n",
     "\n",
-    "More details on how to implement errors-on-errors in combinations can be found in Sec. 3 of [arXiv:2407.05322](https://arxiv.org/abs/2407.05322), with a more in-depth explanation of dependent vs. independent assumptions in Sec. 3.2."
+    "More details on how to implement errors-on-errors in combinations can be found in Sec.\u00a03 of [arXiv:2407.05322](https://arxiv.org/abs/2407.05322), with a more in-depth explanation of dependent vs. independent assumptions in Sec.\u00a03.2."
    ]
   },
   {
@@ -251,7 +267,10 @@
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "data = load_input_data('input_files/diag_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "base_info = comb.input_data()\n",
     "\n",
@@ -394,7 +413,10 @@
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "data = load_input_data('input_files/diag_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -541,7 +563,10 @@
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "data = load_input_data('input_files/diag_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "base_info = comb.input_data()\n",
     "\n",
@@ -678,7 +703,10 @@
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination.from_yaml('input_files/diag_corr.yaml')\n",
+    "data = load_input_data('input_files/diag_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -817,7 +845,10 @@
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination.from_yaml('input_files/hybrid_corr.yaml')\n",
+    "data = load_input_data('input_files/hybrid_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
@@ -914,7 +945,10 @@
    "outputs": [],
    "source": [
     "eps_grid = np.linspace(0., 0.6, 14)\n",
-    "comb = GVMCombination.from_yaml('input_files/full_corr.yaml')\n",
+    "data = load_input_data('input_files/full_corr.yaml')\n",
+    "\n",
+    "comb = GVMCombination(data)\n",
+    "\n",
     "\n",
     "base_info = comb.input_data()\n",
     "cv = []\n",
