Completed input_data configuration

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -20,7 +20,7 @@
     "sys.path.insert(0, gvm_root)\n",
     "\n",
     "from gvm.gvm_toolkit import GVMCombination\n",
-    "from gvm.config import load_input_data\n"
+    "from gvm.config import build_input_data\n"
    ]
   },
   {
@@ -61,11 +61,10 @@
     }
    ],
    "source": [
-    "data = load_input_data('input_files/LHC_comb.yaml')\n",
+    "data = build_input_data('input_files/LHC_comb.yaml')\n",
     "\n",
     "comb_fict = GVMCombination(data)\n",
     "\n",
-    
     "\n",
     "comb           = GVMCombination(data)\n",
     "\n",
@@ -119,12 +118,12 @@
     "ci = {s: [] for s in systematics}\n",
     "\n",
     "for syst in systematics:\n",
-    "    info = comb.input_data()\n",
+    "    info = comb.get_input_data(copy=True)\n",
     "    for k in info['syst']:\n",
     "        info['syst'][k]['error-on-error']['value'] = 0.0\n",
     "    for eps in eps_grid:\n",
     "        info['syst'][syst]['error-on-error']['value'] = eps\n",
-    "        comb.update_data(info)\n",
+    "        comb.set_input_data(info)\n",
     "        cv[syst].append(comb.fit_results.mu)\n",
     "        ci[syst].append(comb.confidence_interval()[2])"
    ]
@@ -237,7 +236,7 @@
     }
    ],
    "source": [
-    "data = load_input_data('input_files/LHC_comb_fictitious_meas.yaml')\n",
+    "data = build_input_data('input_files/LHC_comb_fictitious_meas.yaml')\n",
     "\n",
     "comb_fict = GVMCombination(data)\n",
     "\n",
@@ -280,12 +279,12 @@
     "ci_fict = {s: [] for s in systematics}\n",
     "\n",
     "for syst in systematics:\n",
-    "    info = comb_fict.input_data()\n",
+    "    info = comb_fict.get_input_data(copy=True)\n",
     "    for k in info['syst']:\n",
     "        info['syst'][k]['error-on-error']['value'] = 0.0\n",
     "    for eps in eps_grid:\n",
     "        info['syst'][syst]['error-on-error']['value'] = eps\n",
-    "        comb_fict.update_data(info)\n",
+    "        comb_fict.set_input_data(info)\n",
     "        cv_fict[syst].append(comb_fict.fit_results.mu)\n",
     "        ci_fict[syst].append(comb_fict.confidence_interval()[2])"
    ]
