gvm.py name update

--- a/tutorials/top-mass/top-mass-combination.ipynb
+++ b/tutorials/top-mass/top-mass-combination.ipynb
@@ -19,7 +19,7 @@
     "gvm_root = os.path.abspath(os.path.join(script_dir, '../../'))\n",
     "sys.path.insert(0, gvm_root)\n",
     "\n",
-    "from gvm.gvm_toolkit import GVMCombination\n",
+    "from gvm.gmv import GVMCombination\n",
     "from gvm.config import build_input_data\n"
    ]
   },
