--- a/tutorials/toy/tutorial.ipynb
+++ b/tutorials/toy/tutorial.ipynb
@@ -34,7 +34,7 @@
     "if gvm_root not in sys.path:\n",
     "    sys.path.insert(0, gvm_root)\n",
     "\n",
-    "from gvm.gvm_toolkit import GVMCombination\n",
+    "from gvm.gmv import GVMCombination\n",
     "from gvm.config import build_input_data\n"
    ]
   },
